refs #61194 added telekomdata